--- a/docs/specification/bg-assumption.tex
+++ b/docs/specification/bg-assumption.tex
@@ -24,7 +24,7 @@
       be shared between the host core and co-processor.  As such, {\em all}
       attack vectors
       (see, e.g.,~\cite{SCARV:GYCH:18})
-      that (ab)uses the memory interface {\em must} be robustly mitigated, 
+      that (ab)use the memory interface {\em must} be robustly mitigated, 
       as would be the case without \XCID (i.e., using the host core alone).
 
 \end{itemize}
