--- a/docs/specification/bg-compatibility.tex
+++ b/docs/specification/bg-compatibility.tex
@@ -29,7 +29,7 @@
       \item the instruction encoding is constrained to the 
             \RVCUSTOM{1}~\cite[Table 19.1]{SCARV:RV:ISA:I:17}
             space, i.e., a $25$-bit space with prefix $\RADIX{0101011}{2}$,
-      \item all instruction mnemonics include a domain separation prefix,
+      \item all instruction mnemonics include a domain-separating prefix,
             meaning, for example \VERB[RV]{foo} becomes \VERB[RV]{xc.foo}.
       \end{itemize}
       
